# MIA

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/mia/: main.py
src/mia/backend/: streamlit_app.py
src/mia/backend/chroma/: chroma.py
src/mia/backend/etl/: histo_docu.py
src/mia/backend/etl/boe/: boe.py  task.py
src/mia/backend/etl/classes/: classes.py
src/mia/backend/llm/: classes.py  langgraph.json  prompts.py  rag.py  rag_v2.py
