[project]
name = "mia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastembed>=0.4.2",
    "langchain>=0.3.14",
    "langchain-chroma>=0.2.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.64",
    "lxml>=5.3.1",
    "onnxruntime>=1.19.2",
    "python-dotenv>=1.0.1",
]

[project.scripts]
mia = "mia:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
